// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags component should render hidden tags when click in more tags 1`] = `
<div
  class="flex flex-wrap gap-2 items-center"
>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="tag"
  >
    <span
      class="text-sm"
    >
      Tag 1
    </span>
  </div>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="tag"
  >
    <span
      class="text-sm"
    >
      Tag 2
    </span>
  </div>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="tag"
  >
    <span
      class="text-sm"
    >
      Tag 3
    </span>
  </div>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="more-tags"
  >
    <span
      class="text-sm"
    >
      Hide
       
    </span>
  </div>
</div>
`;

exports[`Tags component should render visible tags 1`] = `
<div
  class="flex flex-wrap gap-2 items-center"
>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="tag"
  >
    <span
      class="text-sm"
    >
      Tag 1
    </span>
  </div>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="tag"
  >
    <span
      class="text-sm"
    >
      Tag 2
    </span>
  </div>
  <div
    class="inline-flex items-center gap-2 px-2 rounded-sm bg-primary-400 text-white cursor-default"
    role="more-tags"
  >
    <span
      class="text-sm"
    >
      +1 more
       
    </span>
  </div>
</div>
`;
